@@ -296,4 +296,4 @@ FAQ
 To be added
 
 """
-__version__ = '0.5'
+__version__ = '0.6'
